--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standardize and append a batch of data"
+    "# Standardize and append a dataset"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "Here, we'll learn \n",
-    "- how to standardize a less well curated collection\n",
+    "- how to standardize a less well curated dataset\n",
     "- how to append it to the growing versioned collection"
    ]
   },
@@ -38,7 +38,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.track(\"ManDYgmftZ8C0000\")"
+    "ln.track(\"ManDYgmftZ8C0003\")"
    ]
   },
   {
@@ -226,7 +226,6 @@
     "    record = bt.CellType.from_source(ontology_id=ontology_id)\n",
     "    name_mapping[name] = record.name  # map the original name to standardized name\n",
     "    record.save()\n",
-    "    record.add_synonym(name)\n",
     "# print the mapping\n",
     "print(name_mapping)"
    ]
@@ -344,10 +343,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "adata_validated.obs[\"cell_type\"] = adata_validated.obs[\"cell_type_untrusted\"].map(name_mapping)"
+    "adata_validated.obs[\"cell_type\"] = adata_validated.obs[\"cell_type_untrusted\"].map(name_mapping)\n",
+    "adata_validated"
    ]
   },
   {
@@ -360,11 +364,24 @@
     "    adata_validated,\n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
     "    categoricals={\"cell_type\": bt.CellType.name, \"cell_type_untrusted\": bt.CellType.name},\n",
-    "    organism=\"human\",          \n",
+    "    organism=\"human\",\n",
     ").save_artifact(\n",
     "    description=\"10x reference adata, trusted cell type annotation\",\n",
     "    revises=artifact,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "artifact_trusted.describe()"
    ]
   },
   {
