--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -337,23 +337,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a new version of the collection by sharding it across the new `artifact` and the artifact underlying version 1 of the collection:"
+    "Create a new version of the collection by appending the new `artifact` to the version 1 of the collection:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "collection_v2 = ln.Collection(\n",
-    "    [artifact, collection_v1.artifacts.all()[0]],\n",
-    "    revises=collection_v1,\n",
-    ").save()"
+    "collection_v2 = collection_v1.append(artifact).save()"
    ]
   },
   {
@@ -430,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.17"
   },
   "nbproject": {
    "id": "ManDYgmftZ8C",
