📝 Add back synonym

--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -221,11 +221,12 @@
    "source": [
     "bionty = bt.CellType.public()  # access the public ontology through bionty\n",
     "name_mapping = {}\n",
-    "for name in adata_validated.obs.cell_type_untrusted.unique():\n",
-    "    ontology_id = bionty.search(name).iloc[0].ontology_id  # top search hit through iloc[0]\n",
+    "for invalid_name in adata_validated.obs[\"cell_type_untrusted\"].unique():\n",
+    "    ontology_id = bionty.search(invalid_name).iloc[0].ontology_id  # top search hit through iloc[0]\n",
     "    record = bt.CellType.from_source(ontology_id=ontology_id)\n",
-    "    name_mapping[name] = record.name  # map the original name to standardized name\n",
+    "    name_mapping[invalid_name] = record.name  # map the original name to standardized name\n",
     "    record.save()\n",
+    "    # record.add_synonym(name)  # optionally save the invalid name as synonym so that it becomes searchable\n",
     "# print the mapping\n",
     "print(name_mapping)"
    ]
