--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -118,7 +118,7 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curator.from_anndata(\n",
+    "curator = ln.Curator.from_anndata(\n",
     "    adata,\n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
     "    categoricals={\n",
@@ -142,7 +142,7 @@
    "outputs": [],
    "source": [
     "# this runs a while, because this instance is still empty\n",
-    "curate.validate()"
+    "curator.validate()"
    ]
   },
   {
@@ -155,7 +155,7 @@
    },
    "outputs": [],
    "source": [
-    "curate.add_validated_from(\"all\")"
+    "curator.add_validated_from(\"all\")"
    ]
   },
   {
@@ -168,7 +168,7 @@
    },
    "outputs": [],
    "source": [
-    "curate.add_new_from_var_index()"
+    "curator.add_new_from_var_index()"
    ]
   },
   {
@@ -181,8 +181,8 @@
    },
    "outputs": [],
    "source": [
-    "curate.add_new_from(\"donor\")\n",
-    "curate.add_new_from(\"cell_type\")"
+    "curator.add_new_from(\"donor\")\n",
+    "curator.add_new_from(\"cell_type\")"
    ]
   },
   {
@@ -195,7 +195,7 @@
    },
    "outputs": [],
    "source": [
-    "curate.validate()"
+    "curator.validate()"
    ]
   },
   {
@@ -215,7 +215,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = curate.save_artifact(description=\"Human immune cells from Conde22\")"
+    "artifact = curator.save_artifact(description=\"Human immune cells from Conde22\")"
    ]
   },
   {
@@ -308,7 +308,7 @@
    },
    "outputs": [],
    "source": [
-    "collection.artifacts.all()"
+    "collection.artifacts.df()"
    ]
   },
   {
