--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are still working with human data, and can globally set an organism:"
+    "Create a curator:"
    ]
   },
   {
@@ -338,21 +338,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name_mapping = {'CD38-positive naive B cell': 'cytotoxic T cell'}"
+    "name_mapping['CD38-positive naive B cell'] = 'cytotoxic T cell'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "adata_validated.obs[\"cell_type\"] = adata_validated.obs[\"cell_type_untrusted\"].map(name_mapping)\n",
-    "adata_validated"
+    "adata_validated.obs[\"cell_type\"] = adata_validated.obs[\"cell_type_untrusted_original\"].map(name_mapping)\n",
+    "adata_validated.obs[\"cell_type\"].unique()"
    ]
   },
   {
@@ -429,10 +425,7 @@
    },
    "outputs": [],
    "source": [
-    "collection_v2 = ln.Collection(\n",
-    "    [collection_v1.artifacts.all()[0], artifact_trusted],\n",
-    "    revises=collection_v1,\n",
-    ").save()"
+    "collection_v2 = collection_v1.append(artifact_trusted).save()"
    ]
   },
   {
