--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -159,20 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "curate.add_validated_from(\"all\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curate.add_new_from_var_index()"
+    "curator.add_new_from_var_index()"
    ]
   },
   {
