--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -159,7 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "curator.add_new_from_var_index()"
+    "curate.add_new_from_var_index()"
    ]
   },
   {
