--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -159,7 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curator.from_anndata(\n",
+    "curator = ln.Curator.from_anndata(\n",
     "    adata_validated,\n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
     "    categoricals={\"cell_type_untrusted\": bt.CellType.name},\n",
@@ -177,20 +177,7 @@
    },
    "outputs": [],
    "source": [
-    "curate.validate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curate.add_validated_from_var_index()"
+    "curator.validate()"
    ]
   },
   {
@@ -269,7 +256,16 @@
    },
    "outputs": [],
    "source": [
-    "curate.validate()"
+    "curator.validate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curator.add_validated_from_var_index()"
    ]
   },
   {
@@ -289,7 +285,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = curate.save_artifact(description=\"10x reference adata\")"
+    "artifact = curator.save_artifact(description=\"10x reference adata\")"
    ]
   },
   {
@@ -398,14 +394,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "collection_v1 = ln.Collection.get(name=\"My versioned scRNA-seq collection\", is_latest=True)"
+    "collection_v1 = ln.Collection.get(uid=\"SNmxsMWk6gFX23t10000\")"
    ]
   },
   {
