--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -35,7 +35,7 @@
     ":maxdepth: 1\n",
     ":hidden:\n",
     "\n",
-    "scrna2\n",
+    "scrna-append\n",
     "scrna3\n",
     "scrna4\n",
     "scrna-mappedcollection\n",
