--- a/docs/scrna-append.ipynb
+++ b/docs/scrna-append.ipynb
@@ -388,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection_v1 = ln.Collection.get(uid=\"SNmxsMWk6gFX23t10000\")"
+    "collection_v1 = ln.Collection.get(name=\"My versioned scRNA-seq collection\")"
    ]
   },
   {
