📝 Polish scrna guide, add another cell type feature: cell_type_untrusted (#166)

--- a/docs/scrna-mappedcollection.ipynb
+++ b/docs/scrna-mappedcollection.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "source": [
     "![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna4.ipynb)\n",
-    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/transform/Qr1kIHvK506r65cN/Jj8SEeksiGEoIk04EixI)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna-mappedcollection.ipynb)\n",
+    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/transform/Qr1kIHvK506r65cN)"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "source": [
     "import lamindb as ln\n",
     "\n",
-    "ln.track(\"Qr1kIHvK506r0000\")"
+    "ln.track(\"Qr1kIHvK506r0002\")"
    ]
   },
   {
@@ -78,17 +78,9 @@
    "id": "5e348b32",
    "metadata": {},
    "source": [
-    "Let us create a [map-style dataset](https://pytorch.org/docs/stable/data) using using {meth}`~lamindb.Collection.mapped`: a {class}`~lamindb.core.MappedCollection`. This is what, for example, the PyTorch `DataLoader` expects as an input.\n",
+    "Let us create a [map-style dataset](https://pytorch.org/docs/stable/data) using using {meth}`~lamindb.Collection.mapped`: a {class}`~lamindb.core.MappedCollection`.\n",
     "\n",
-    "Under-the-hood, it performs a virtual inner join of the features of the underlying `AnnData` objects and thus allows to work with very large collections."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7c7f3d06",
-   "metadata": {},
-   "source": [
-    "You can either perform a virtual inner join:"
+    "Under-the-hood, it performs a virtual join of the features of the underlying `AnnData` objects without loading the datasets into memory. You can either perform an inner join:"
    ]
   },
   {
@@ -103,8 +95,8 @@
    "outputs": [],
    "source": [
     "with collection.mapped(obs_keys=[\"cell_type\"], join=\"inner\") as dataset:\n",
-    "    print(\"N observations:\", dataset.shape[0])\n",
-    "    print(\"N variables:\", len(dataset.var_joint))"
+    "    print(\"#observations\", dataset.shape[0])\n",
+    "    print(\"#variables:\", len(dataset.var_joint))"
    ]
   },
   {
@@ -112,7 +104,7 @@
    "id": "982b8f94",
    "metadata": {},
    "source": [
-    "Or a virtual outer join:"
+    "Or an outer join:"
    ]
   },
   {
@@ -126,21 +118,8 @@
    },
    "outputs": [],
    "source": [
-    "dataset = collection.mapped(obs_keys=[\"cell_type\"], join=\"outer\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a736b129",
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "len(dataset.var_joint)"
+    "dataset = collection.mapped(obs_keys=[\"cell_type\"], join=\"outer\")\n",
+    "print(\"#variables:\", len(dataset.var_joint))"
    ]
   },
   {
@@ -149,7 +128,7 @@
    "metadata": {},
    "source": [
     "This is compatible with a PyTorch `DataLoader` because it implements `__getitem__` over a list of backed `AnnData` objects.\n",
-    "The 5th cell in the collection can be accessed like:"
+    "For instance, the 5th observation in the collection can be accessed via:"
    ]
   },
   {
@@ -193,9 +172,7 @@
    "id": "d9a4a7a1",
    "metadata": {},
    "source": [
-    "It is also possible to create a dataset by selecting only observations with certain values of an `.obs` column. \n",
-    "\n",
-    "Setting `obs_filter` here makes the dataset iterate only over observations having `CD16-positive, CD56-dim natural killer cell, human` or `macrophage` in `.obs` column `cell_type` across all `AnnData` objects."
+    "It is also possible to create a dataset by selecting only observations with certain values of an `.obs` column. Setting `obs_filter` in the below example makes the dataset iterate only over observations having `CD16-positive, CD56-dim natural killer cell, human` or `macrophage` in `.obs` column `cell_type` across all `AnnData` objects."
    ]
   },
   {
