--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -5,15 +5,15 @@
    "metadata": {},
    "source": [
     "![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna2.ipynb)\n",
-    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/transform/ManDYgmftZ8C65cN/D7mKQfDEiaoZl8mhdHYX)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna-append.ipynb)\n",
+    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/transform/ManDYgmftZ8C0003)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standardize and append a batch of data"
+    "# Standardize and append a dataset"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "Here, we'll learn \n",
-    "- how to standardize a less well curated collection\n",
+    "- how to standardize a less well curated dataset\n",
     "- how to append it to the growing versioned collection"
    ]
   },
@@ -38,7 +38,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.track(\"ManDYgmftZ8C0000\")"
+    "ln.track(\"ManDYgmftZ8C0003\")"
    ]
   },
   {
@@ -59,6 +59,8 @@
    "outputs": [],
    "source": [
     "adata = ln.core.datasets.anndata_pbmc68k_reduced()\n",
+    "# we don't trust the cell type annotation in this dataset\n",
+    "adata.obs.rename(columns={\"cell_type\": \"cell_type_untrusted\"}, inplace=True)\n",
     "adata"
    ]
   },
@@ -66,20 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are still working with human data, and can globally set an organism:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "bt.settings.organism = \"human\""
+    "Create a curator:"
    ]
   },
   {
@@ -95,7 +84,8 @@
     "curate = ln.Curator.from_anndata(\n",
     "    adata,\n",
     "    var_index=bt.Gene.symbol,\n",
-    "    categoricals={adata.obs.cell_type.name: bt.CellType.name},\n",
+    "    categoricals={\"cell_type_untrusted\": bt.CellType.name},\n",
+    "    organism=\"human\",\n",
     ")"
    ]
   },
@@ -127,6 +117,7 @@
     "    adata.var.index,\n",
     "    field=bt.Gene.symbol,\n",
     "    return_field=bt.Gene.ensembl_gene_id,\n",
+    "    organism=\"human\",\n",
     ")\n",
     "# use ensembl_gene_id as the index\n",
     "adata.var.index.name = \"symbol\"\n",
@@ -168,10 +159,11 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curator.from_anndata(\n",
+    "curator = ln.Curator.from_anndata(\n",
     "    adata_validated,\n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
-    "    categoricals={\"cell_type\": bt.CellType.name},\n",
+    "    categoricals={\"cell_type_untrusted\": bt.CellType.name},\n",
+    "    organism=\"human\",\n",
     ")"
    ]
   },
@@ -185,7 +177,7 @@
    },
    "outputs": [],
    "source": [
-    "curate.validate()"
+    "curator.validate()"
    ]
   },
   {
@@ -199,7 +191,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since none of the cell types are validate, let us search the cell type names from the public ontology, and add the name found in the `AnnData` object as a synonym to the top match found in the public ontology."
+    "None of the cell type names are valid.\n",
+    "\n",
+    "We'll now search the public ontology and add the name found in the dataset as a synonym to the top match found in the public ontology."
    ]
   },
   {
@@ -213,15 +207,15 @@
    "outputs": [],
    "source": [
     "bionty = bt.CellType.public()  # access the public ontology through bionty\n",
-    "name_mapper = {}\n",
-    "for name in adata_validated.obs.cell_type.unique():\n",
-    "    # search the public ontology and use the ontology id of the top match\n",
-    "    ontology_id = bionty.search(name).iloc[0].ontology_id\n",
-    "    # create a record by loading the top match from bionty\n",
+    "name_mapping = {}\n",
+    "for invalid_name in adata_validated.obs[\"cell_type_untrusted\"].unique():\n",
+    "    ontology_id = bionty.search(invalid_name).iloc[0].ontology_id  # top search hit through iloc[0]\n",
     "    record = bt.CellType.from_source(ontology_id=ontology_id)\n",
-    "    name_mapper[name] = record.name  # map the original name to standardized name\n",
+    "    name_mapping[invalid_name] = record.name  # map the original name to standardized name\n",
     "    record.save()\n",
-    "    record.add_synonym(name)"
+    "    # record.add_synonym(name)  # optionally save the invalid name as synonym so that it becomes searchable\n",
+    "# print the mapping\n",
+    "print(name_mapping)"
    ]
   },
   {
@@ -241,7 +235,8 @@
    },
    "outputs": [],
    "source": [
-    "adata_validated.obs.cell_type = adata_validated.obs.cell_type.map(name_mapper)"
+    "adata_validated.obs[\"cell_type_untrusted_original\"] = adata_validated.obs[\"cell_type_untrusted\"]  # copy the original annotations\n",
+    "adata_validated.obs[\"cell_type_untrusted\"] = adata_validated.obs[\"cell_type_untrusted_original\"].map(name_mapping)"
    ]
   },
   {
@@ -261,7 +256,7 @@
    },
    "outputs": [],
    "source": [
-    "curate.validate()"
+    "curator.validate()"
    ]
   },
   {
@@ -281,7 +276,20 @@
    },
    "outputs": [],
    "source": [
-    "artifact = curate.save_artifact(description=\"10x reference adata\")"
+    "artifact = curator.save_artifact(description=\"10x reference adata\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "artifact.view_lineage()"
    ]
   },
   {
@@ -290,7 +298,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.view_lineage()"
+    "artifact.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Re-curate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We review the dataset and find all annotations trustworthy up there being a `'CD38-positive naive B cell'`.\n",
+    "\n",
+    "Inspecting the `name_mapping` in detail tells us `'CD8+/CD45RA+ Naive Cytotoxic'` was erroneously mapped on a B cell.\n",
+    "\n",
+    "Let us correct this and create a `'cell_type'` feature that we can now trust."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name_mapping['CD38-positive naive B cell'] = 'cytotoxic T cell'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata_validated.obs[\"cell_type\"] = adata_validated.obs[\"cell_type_untrusted_original\"].map(name_mapping)\n",
+    "adata_validated.obs[\"cell_type\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artifact_trusted = ln.Curator.from_anndata(\n",
+    "    adata_validated,\n",
+    "    var_index=bt.Gene.ensembl_gene_id,\n",
+    "    categoricals={\"cell_type\": bt.CellType.name, \"cell_type_untrusted\": bt.CellType.name},\n",
+    "    organism=\"human\",\n",
+    ").save_artifact(\n",
+    "    description=\"10x reference adata, trusted cell type annotation\",\n",
+    "    revises=artifact,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "artifact_trusted.describe()"
    ]
   },
   {
@@ -310,11 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "collection_v1 = ln.Collection.get(name=\"My versioned scRNA-seq collection\")"
@@ -337,10 +408,7 @@
    },
    "outputs": [],
    "source": [
-    "collection_v2 = ln.Collection(\n",
-    "    [artifact, collection_v1.artifacts.all()[0]],\n",
-    "    revises=collection_v1,\n",
-    ").save()"
+    "collection_v2 = collection_v1.append(artifact_trusted).save()"
    ]
   },
   {
@@ -394,7 +462,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "collection_v2.view_lineage()"
