--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna2.ipynb)\n",
+    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna3.ipynb)\n",
     "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/transform/agayZTonayqA5zKv/Z4W57d3mYiYyRmAinfQ0)"
    ]
   },
@@ -49,16 +49,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "users = ln.User.lookup()"
+    "Query the transform, e.g., by `uid`:"
    ]
   },
   {
@@ -71,20 +65,14 @@
    },
    "outputs": [],
    "source": [
-    "ln.Transform.filter(created_by=users.testuser1).search(\"scrna\").df()"
+    "transform = ln.Transform.get(uid=\"Nv48yAceNSh80003\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "transform = ln.Transform.get(uid=\"Nv48yAceNSh80000\")"
+    "Query the artifact:"
    ]
   },
   {
@@ -117,36 +105,11 @@
    },
    "outputs": [],
    "source": [
-    "organism = bt.Organism.lookup()\n",
-    "tissues = bt.Tissue.lookup()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
+    "tissues = bt.Tissue.lookup()\n",
+    "\n",
     "query = ln.Artifact.filter(\n",
-    "    organisms=organism.human,\n",
-    "    tissues=tissues.bone_marrow,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
+    "    tissues=tissues.blood,\n",
+    ")\n",
     "query.df()"
    ]
   },
@@ -158,6 +121,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Query all artifacts that measured the \"cell_type\" feature:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -167,7 +137,7 @@
    },
    "outputs": [],
    "source": [
-    "query_set = ln.Artifact.filter().all()\n",
+    "query_set = ln.Artifact.filter(feature_sets__features__name=\"cell_type\").all()\n",
     "artifact1, artifact2 = query_set[0], query_set[1]"
    ]
   },
@@ -187,7 +157,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "artifact1.view_lineage()"
@@ -209,7 +183,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "artifact2.view_lineage()"
@@ -319,6 +297,15 @@
    "metadata": {},
    "source": [
     "We can now subset the two collections by shared cell types:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata2"
    ]
   },
   {
