💚 Fix docs build

--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "Here, we'll analyze the growing collection by loading it into memory.\n",
     "This is only possible if it's not too large.\n",
-    "If your data is large, you'll likely want to iterate over the collection to train a model, the topic of the next page ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna5))."
+    "If your data is large, you'll likely want to iterate over the collection to train a model, the topic of the next page ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna-mappedcollection))."
    ]
   },
   {
