--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -317,7 +317,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
@@ -331,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.7"
   },
   "nbproject": {
    "id": "Nv48yAceNSh8",
@@ -341,11 +341,6 @@
    "user_id": "bKeW4T6E",
    "user_name": "Test User2",
    "version": "1"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "ae1fefc8646a06dd2e75004cd934adda7c5727b046986a772e3b44b0ffba9754"
-   }
   }
  },
  "nbformat": 4,
