:art: Add missing validate call
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -81,12 +81,13 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curator.from_anndata(\n",
+    "curator = ln.Curator.from_anndata(\n",
     "    adata,\n",
     "    var_index=bt.Gene.symbol,\n",
     "    categoricals={\"cell_type_untrusted\": bt.CellType.name},\n",
     "    organism=\"human\",\n",
-    ")"
+    ")\n",
+    "curator.validate()"
    ]
   },
   {
