💚 Try to fix docs

--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's convert Gene symbols to Ensembl ids via {meth}`~docs:lamindb.core.CanValidate.standardize`. Note that this is a non-unique mapping and the first match is kept because the `keep` parameter in `.standardize()` defaults to `\"first\"`:"
+    "Let's convert Gene symbols to Ensembl ids via {meth}`~docs:lamindb.core.CanCurate.standardize`. Note that this is a non-unique mapping and the first match is kept because the `keep` parameter in `.standardize()` defaults to `\"first\"`:"
    ]
   },
   {
