--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -396,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can convert identifiers by passing `return_field` to {meth}`~lamindb.core.CanValidate.standardize`:"
+    "You can convert identifiers by passing `return_field` to {meth}`~lamindb.core.CanCurate.standardize`:"
    ]
   },
   {
