--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -210,7 +210,7 @@
     "bionty = bt.CellType.public()  # access the public ontology through bionty\n",
     "name_mapping = {}\n",
     "for invalid_name in adata_validated.obs[\"cell_type_untrusted\"].unique():\n",
-    "    ontology_id = bionty.search(invalid_name).iloc[0].ontology_id  # top search hit through iloc[0]\n",
+    "    ontology_id = bionty.search(invalid_name).iloc[0].index  # top search hit through iloc[0]\n",
     "    record = bt.CellType.from_source(ontology_id=ontology_id)\n",
     "    name_mapping[invalid_name] = record.name  # map the original name to standardized name\n",
     "    record.save()\n",
@@ -476,7 +476,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -490,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.17"
   },
   "nbproject": {
    "id": "ManDYgmftZ8C",
