--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"PDL1\", filed=\"symbol\").head(3)"
+    "public.search(\"PDL1\", field=\"symbol\").head(3)"
    ]
   },
   {
