--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -210,7 +210,7 @@
     "bionty = bt.CellType.public()  # access the public ontology through bionty\n",
     "name_mapping = {}\n",
     "for invalid_name in adata_validated.obs[\"cell_type_untrusted\"].unique():\n",
-    "    ontology_id = bionty.search(invalid_name).iloc[0].index  # top search hit through iloc[0]\n",
+    "    ontology_id = bionty.search(invalid_name).index[0]  # top search hit through iloc[0]\n",
     "    record = bt.CellType.from_source(ontology_id=ontology_id)\n",
     "    name_mapping[invalid_name] = record.name  # map the original name to standardized name\n",
     "    record.save()\n",
