--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, search also covers synonyms and all other fileds containing strings:"
+    "By default, search also covers synonyms and all other fields containing strings:"
    ]
   },
   {
@@ -234,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Search another field (default search is done on all fields containing strings):"
+    "Search specific field (by default, search is done on all fields containing strings):"
    ]
   },
   {
