--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, search also covers synonyms:"
+    "By default, search also covers synonyms and all other fields containing strings:"
    ]
   },
   {
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can turn this off synonym by passing `synonyms_field=None`:"
+    "You can turn search only in symbols by passing `field=\"symbol\"`:"
    ]
   },
   {
@@ -227,14 +227,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "public.search(\"PDL1\", synonyms_field=None).head(3)"
+    "public.search(\"PDL1\", field=\"symbol\").head(3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Search another field (default is `.name`):"
+    "Search specific field (by default, search is done on all fields containing strings):"
    ]
   },
   {
@@ -511,7 +511,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -525,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
