:art: Fix CT curation
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -219,16 +219,16 @@
    },
    "outputs": [],
    "source": [
-    "ct_public_lo = bt.CellType.lookup()\n",
+    "ct_public_lo = bt.CellType.public().lookup()\n",
     "name_mapping = {\n",
     "    \"Dendritic cells\": ct_public_lo.dendritic_cell.name,\n",
     "    \"CD19+ B\": ct_public_lo.b_cell_cd19_positive.name,\n",
     "    \"CD4+/CD45RO+ Memory\": ct_public_lo.effector_memory_cd45ra_positive_alpha_beta_t_cell_terminally_differentiated.name,\n",
-    "    \"CD8+ Cytotoxic T\": ct_public_lo.cd8_positive_alpha_beta_t_cell.name,\n",
+    "    \"CD8+ Cytotoxic T\": ct_public_lo.cd8_positive_alpha_beta_cytotoxic_t_cell.name,\n",
     "    \"CD4+/CD25 T Reg\": ct_public_lo.cd4_positive_cd25_positive_alpha_beta_regulatory_t_cell.name,\n",
     "    \"CD14+ Monocytes\": ct_public_lo.cd14_positive_monocyte.name,\n",
     "    \"CD56+ NK\": ct_public_lo.cd56_positive_cd161_positive_immature_natural_killer_cell_human.name,\n",
-    "    \"CD8+/CD45RA+ Naive Cytotoxic\": ct_public_lo.cd8_positive_alpha_beta_cytotoxic_t_cell.name,\n",
+    "    \"CD8+/CD45RA+ Naive Cytotoxic\": ct_public_lo.cd8_positive_alpha_beta_memory_t_cell_cd45ro_positive.name,\n",
     "    \"CD34+\": ct_public_lo.cd34_positive_cd56_positive_cd117_positive_common_innate_lymphoid_precursor_human.name\n",
     "}"
    ]
