✨ Upgrade ruff and pre-commit config
Signed-off-by: Lukas Heumos <lukas.heumos@posteo.net>

--- a/docs/scrna-mappedcollection.ipynb
+++ b/docs/scrna-mappedcollection.ipynb
@@ -186,7 +186,10 @@
    },
    "outputs": [],
    "source": [
-    "select_by_cell_type = (\"CD16-positive, CD56-dim natural killer cell, human\", \"macrophage\")\n",
+    "select_by_cell_type = (\n",
+    "    \"CD16-positive, CD56-dim natural killer cell, human\",\n",
+    "    \"macrophage\",\n",
+    ")\n",
     "\n",
     "with collection.mapped(obs_filter=(\"cell_type\", select_by_cell_type)) as dataset_filter:\n",
     "    print(dataset_filter.shape)"
@@ -247,7 +250,7 @@
    },
    "outputs": [],
    "source": [
-    "for batch in dataloader:\n",
+    "for _batch in dataloader:\n",
     "    pass"
    ]
   },
