--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -229,7 +229,7 @@
     "    \"CD14+ Monocytes\": ct_public_lo.cd14_positive_monocyte.name,\n",
     "    \"CD56+ NK\": ct_public_lo.cd56_positive_cd161_positive_immature_natural_killer_cell_human.name,\n",
     "    \"CD8+/CD45RA+ Naive Cytotoxic\": ct_public_lo.cd8_positive_alpha_beta_memory_t_cell_cd45ro_positive.name,\n",
-    "    \"CD34+\": ct_public_lo.cd34_positive_cd56_positive_cd117_positive_common_innate_lymphoid_precursor_human.name\n",
+    "    \"CD34+\": ct_public_lo.cd34_positive_cd56_positive_cd117_positive_common_innate_lymphoid_precursor_human.name,\n",
     "}"
    ]
   },
@@ -250,8 +250,12 @@
    },
    "outputs": [],
    "source": [
-    "adata_validated.obs[\"cell_type_untrusted_original\"] = adata_validated.obs[\"cell_type_untrusted\"]  # copy the original annotations\n",
-    "adata_validated.obs[\"cell_type_untrusted\"] = adata_validated.obs[\"cell_type_untrusted_original\"].map(name_mapping)"
+    "adata_validated.obs[\"cell_type_untrusted_original\"] = adata_validated.obs[\n",
+    "    \"cell_type_untrusted\"\n",
+    "]  # copy the original annotations\n",
+    "adata_validated.obs[\"cell_type_untrusted\"] = adata_validated.obs[\n",
+    "    \"cell_type_untrusted_original\"\n",
+    "].map(name_mapping)"
    ]
   },
   {
@@ -340,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name_mapping['CD38-positive naive B cell'] = 'cytotoxic T cell'"
+    "name_mapping[\"CD38-positive naive B cell\"] = \"cytotoxic T cell\""
    ]
   },
   {
@@ -349,7 +353,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata_validated.obs[\"cell_type\"] = adata_validated.obs[\"cell_type_untrusted_original\"].map(name_mapping)\n",
+    "adata_validated.obs[\"cell_type\"] = adata_validated.obs[\n",
+    "    \"cell_type_untrusted_original\"\n",
+    "].map(name_mapping)\n",
     "adata_validated.obs[\"cell_type\"].unique()"
    ]
   },
@@ -362,7 +368,10 @@
     "artifact_trusted = ln.Curator.from_anndata(\n",
     "    adata_validated,\n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
-    "    categoricals={\"cell_type\": bt.CellType.name, \"cell_type_untrusted\": bt.CellType.name},\n",
+    "    categoricals={\n",
+    "        \"cell_type\": bt.CellType.name,\n",
+    "        \"cell_type_untrusted\": bt.CellType.name,\n",
+    "    },\n",
     "    organism=\"human\",\n",
     ").save_artifact(\n",
     "    description=\"10x reference adata, trusted cell type annotation\",\n",
