--- a/docs/scrna-mappedcollection.ipynb
+++ b/docs/scrna-mappedcollection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3a92e598",
+   "id": "0",
    "metadata": {},
    "source": [
     "![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a0da8a5",
+   "id": "1",
    "metadata": {},
    "source": [
     "# Train a machine learning model on a collection"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a33a86e",
+   "id": "2",
    "metadata": {},
    "source": [
     "Here, we iterate over the artifacts within a collection to train a machine learning model at scale."
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c03d51f8",
+   "id": "3",
    "metadata": {
     "tags": [
      "hide-output"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87a94c1a",
+   "id": "4",
    "metadata": {},
    "source": [
     "Query our collection:"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f232d65e",
+   "id": "5",
    "metadata": {
     "tags": [
      "hide-output"
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77d7dc38",
+   "id": "6",
    "metadata": {},
    "source": [
     "## Create a map-style dataset"
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e348b32",
+   "id": "7",
    "metadata": {},
    "source": [
     "Let us create a [map-style dataset](https://pytorch.org/docs/stable/data) using using {meth}`~lamindb.Collection.mapped`: a {class}`~lamindb.core.MappedCollection`.\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42c0fcf0",
+   "id": "8",
    "metadata": {
     "tags": [
      "hide-output"
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "982b8f94",
+   "id": "9",
    "metadata": {},
    "source": [
     "Or an outer join:"
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15f6caaa",
+   "id": "10",
    "metadata": {
     "tags": [
      "hide-output"
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e46ee80",
+   "id": "11",
    "metadata": {},
    "source": [
     "This is compatible with a PyTorch `DataLoader` because it implements `__getitem__` over a list of backed `AnnData` objects.\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bacad8a",
+   "id": "12",
    "metadata": {
     "tags": [
      "hide-output"
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3954ece9",
+   "id": "13",
    "metadata": {},
    "source": [
     "The `labels` are encoded into integers:"
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72a0a9ae",
+   "id": "14",
    "metadata": {
     "tags": [
      "hide-output"
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9a4a7a1",
+   "id": "15",
    "metadata": {},
    "source": [
     "It is also possible to create a dataset by selecting only observations with certain values of an `.obs` column. Setting `obs_filter` in the below example makes the dataset iterate only over observations having `CD16-positive, CD56-dim natural killer cell, human` or `macrophage` in `.obs` column `cell_type` across all `AnnData` objects."
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a6aec46",
+   "id": "16",
    "metadata": {
     "tags": [
      "hide-output"
@@ -186,7 +186,10 @@
    },
    "outputs": [],
    "source": [
-    "select_by_cell_type = (\"CD16-positive, CD56-dim natural killer cell, human\", \"macrophage\")\n",
+    "select_by_cell_type = (\n",
+    "    \"CD16-positive, CD56-dim natural killer cell, human\",\n",
+    "    \"macrophage\",\n",
+    ")\n",
     "\n",
     "with collection.mapped(obs_filter=(\"cell_type\", select_by_cell_type)) as dataset_filter:\n",
     "    print(dataset_filter.shape)"
@@ -194,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e4033ed",
+   "id": "17",
    "metadata": {},
    "source": [
     "## Create a pytorch DataLoader"
@@ -202,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5321512",
+   "id": "18",
    "metadata": {},
    "source": [
     "Let us use a weighted sampler:"
@@ -211,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cef13ba8",
+   "id": "19",
    "metadata": {
     "tags": [
      "hide-output"
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "181fe57e",
+   "id": "20",
    "metadata": {},
    "source": [
     "We can now iterate through the data loader:"
@@ -239,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26015540",
+   "id": "21",
    "metadata": {
     "tags": [
      "hide-output"
@@ -253,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11ea391d",
+   "id": "22",
    "metadata": {},
    "source": [
     "Close the connections in {class}`~lamindb.core.MappedCollection`:"
@@ -262,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3b507f6",
+   "id": "23",
    "metadata": {
     "tags": [
      "hide-output"
@@ -275,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c955a7b7",
+   "id": "24",
    "metadata": {},
    "source": [
     ":::{dropdown} In practice, use a context manager\n",
