--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -53,7 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install 'lamindb[jupyter,aws,bionty]'\n",
+    "# pip install 'lamindb[jupyter,bionty]'\n",
     "!lamin init --storage ./test-scrna --schema bionty"
    ]
   },
@@ -70,7 +70,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.track(\"Nv48yAceNSh80003\")"
+    "ln.track()"
    ]
   },
   {
@@ -202,7 +202,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = curator.save_artifact(description=\"Human immune cells from Conde22\")"
+    "artifact = curator.save_artifact(key=\"datasets/conde22.h5ad\")"
    ]
   },
   {
@@ -255,7 +255,7 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection(artifact, name=\"My versioned scRNA-seq collection\").save()"
+    "collection = ln.Collection(artifact, key=\"My versioned scRNA-seq collection\").save()"
    ]
   },
   {
@@ -317,7 +317,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
@@ -331,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.8"
   },
   "nbproject": {
    "id": "Nv48yAceNSh8",
