--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query the transform, e.g., by `uid`:"
+    "Query the transform, e.g., by `key`:"
    ]
   },
   {
@@ -65,7 +65,7 @@
    },
    "outputs": [],
    "source": [
-    "transform = ln.Transform.get(uid=\"Nv48yAceNSh80003\")"
+    "transform = ln.Transform.get(key=\"scrna.ipynb\")"
    ]
   },
   {
