--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -70,7 +70,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.track(\"Nv48yAceNSh80003\")  # <-- passing a uid is optional"
+    "ln.track()"
    ]
   },
   {
