--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "# pip install 'lamindb[bionty]'\n",
-    "!lamin init --storage ./test-public-ontologies --schema bionty"
+    "!lamin init --storage ./test-public-ontologies --modules bionty"
    ]
   },
   {
