--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "# pip install 'lamindb[jupyter,bionty]'\n",
-    "!lamin init --storage ./test-scrna --schema bionty"
+    "!lamin init --storage ./test-scrna --modules bionty"
    ]
   },
   {
