--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -65,7 +65,8 @@
    },
    "outputs": [],
    "source": [
-    "transform = ln.Transform.get(key=\"scrna.ipynb\")"
+    "transform = ln.Transform.get(key=\"scrna.ipynb\")\n",
+    "transform"
    ]
   },
   {
