--- a/docs/scrna-mappedcollection.ipynb
+++ b/docs/scrna-mappedcollection.ipynb
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection.get(name=\"My versioned scRNA-seq collection\", version=\"2\")\n",
+    "collection = ln.Collection.get(key=\"My versioned scRNA-seq collection\", version=\"2\")\n",
     "collection.describe()"
    ]
   },
