--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -412,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection_v1 = ln.Collection.get(name=\"My versioned scRNA-seq collection\")"
+    "collection_v1 = ln.Collection.get(key=\"My versioned scRNA-seq collection\")"
    ]
   },
   {
