--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -64,7 +64,7 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection.get(name=\"My versioned scRNA-seq collection\", version=\"2\")"
+    "collection = ln.Collection.get(key=\"My versioned scRNA-seq collection\", version=\"2\")"
    ]
   },
   {
