♻️ Add to new-style curator

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -105,6 +105,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Before validating & annotating this artifact, we need to define valid features and a schema."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define valid features\n",
+    "ln.Feature(name=\"donor\", dtype=str).save()\n",
+    "ln.Feature(name=\"tissue\", dtype=bt.Tissue).save()\n",
+    "ln.Feature(name=\"cell_type\", dtype=bt.CellType).save()\n",
+    "ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save()\n",
+    "\n",
+    "# define anndata schema\n",
+    "obs_schema = ln.Schema(itype=ln.Feature).save()\n",
+    "var_schema = ln.Schema(itype=bt.Gene.ensembl_gene_id, dtype=int).save()\n",
+    "schema = ln.Schema(\n",
+    "    otype=\"AnnData\", components={\"obs\": obs_schema, \"var\": var_schema}\n",
+    ").save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's curate this artifact:"
    ]
   },
@@ -118,17 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "curator = ln.Curator.from_anndata(\n",
-    "    adata,\n",
-    "    var_index=bt.Gene.ensembl_gene_id,\n",
-    "    categoricals={\n",
-    "        adata.obs.donor.name: ln.ULabel.name,\n",
-    "        adata.obs.tissue.name: bt.Tissue.name,\n",
-    "        adata.obs.cell_type.name: bt.CellType.name,\n",
-    "        adata.obs.assay.name: bt.ExperimentalFactor.name,\n",
-    "    },\n",
-    "    organism=\"human\",\n",
-    ")"
+    "curator = ln.curators.AnnDataCurator(adata, schema)"
    ]
   },
   {
@@ -141,48 +158,52 @@
    },
    "outputs": [],
    "source": [
-    "# this runs a while, because this instance is still empty\n",
-    "curator.validate()"
+    "try:\n",
+    "    curator.validate()\n",
+    "except ln.errors.ValidationError:\n",
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "curator.add_new_from_var_index()"
+    "curator.slots[\"obs\"].cat.add_new_from(\"cell_type\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "curator.add_new_from(\"donor\")\n",
-    "curator.add_new_from(\"cell_type\")"
+    "try:\n",
+    "    curator.validate()\n",
+    "except ln.errors.ValidationError:\n",
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "curator.validate()"
+    "curator.slots[\"var\"].cat.add_new_from(\"var_index\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    curator.validate()\n",
+    "except ln.errors.ValidationError:\n",
+    "    pass"
    ]
   },
   {
@@ -255,7 +276,7 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection(artifact, key=\"My versioned scRNA-seq collection\").save()"
+    "collection = ln.Collection(artifact, key=\"scrna/collection1\").save()"
    ]
   },
   {
