♻️ Adapt for lamindb 1.5.0

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna.ipynb)\n",
-    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/transform/Nv48yAceNSh87CpJ/QtqH9DLlh3aEUnYu4oe7)"
+    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/transform/Nv48yAceNSh8)"
    ]
   },
   {
@@ -70,7 +70,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.track()"
+    "ln.track(\"Nv48yAceNSh8\")"
    ]
   },
   {
@@ -122,9 +122,11 @@
     "\n",
     "# define anndata schema\n",
     "obs_schema = ln.Schema(itype=ln.Feature).save()\n",
-    "var_schema = ln.Schema(itype=bt.Gene.ensembl_gene_id, dtype=int).save()\n",
+    "varT_schema = ln.Schema(itype=bt.Gene.ensembl_gene_id).save()\n",
     "schema = ln.Schema(\n",
-    "    otype=\"AnnData\", components={\"obs\": obs_schema, \"var\": var_schema}\n",
+    "    name=\"Flexible AnnData\",\n",
+    "    otype=\"AnnData\",\n",
+    "    components={\"obs\": obs_schema, \"var.T\": varT_schema},\n",
     ").save()"
    ]
   },
@@ -165,12 +167,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One cell type isn't validated because it's not part of the `CellType` registry. Let's create it."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "curator.slots[\"obs\"].cat.add_new_from(\"cell_type\")"
+    "bt.CellType(name=\"animal cell\").save()"
    ]
   },
   {
@@ -186,12 +195,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "curator.slots[\"var\"].cat.add_new_from(\"var_index\")"
+    "Some Ensembl gene IDs are not validated, likely because they stem from an older version of Ensembl. We create records in the registry through the following convenience method."
    ]
   },
   {
@@ -200,10 +207,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    curator.validate()\n",
-    "except ln.errors.ValidationError:\n",
-    "    pass"
+    "curator.slots[\"var.T\"].cat.add_new_from(\"columns\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, we could import genes from an old Ensembl version into the `Gene` registry: {doc}`bio-registries.ipynb#access-any-ensembl-genes`."
    ]
   },
   {
